kubernetes/apps/health-system/oie/config/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: oie
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oie
    spec:
      containers:
        - name: oie
          image: openintegrationengine/engine:4.5.2-tp.1-ubuntu-jre
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          startupProbe:
            tcpSocket:
              port: 8443
            failureThreshold: 60
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8443
            initialDelaySeconds: 90
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1500m
              memory: 2Gi
          volumeMounts:
            - name: appdata
              mountPath: /opt/engine/appdata
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: oie-appdata
