kubernetes/apps/health-system/oie/config/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: oie
spec:
  selector:
    app.kubernetes.io/name: oie
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: https
      port: 8443
      targetPort: https
