kubernetes/apps/health-system/oie/config/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oie
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: internal
  rules:
    - host: oie.rbl.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oie
                port:
                  number: 8443
